added the different playpage.handlebars and specific ytURLs changed class of box1 to box

--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -26,27 +26,25 @@
     {{/each}}
 
 
-    <a href="/playlist1">
-        <div class="block1">Ambient Med</div>
+    <a href="/playpage1">
+        <div class="block">Ambient Meditative playlist</div>
     </a>
 
-    <a href="/playlist2/">
-        <div class="block">Ambient Med 2</div>
+    <a href="/playpage2/">
+        <div class="block">Concentration & Focus</div>
     </a>
-    <a href="/playlist3/">
-        <div class="block">Ambient Med 3</div>
+    <a href="/playpage3/">
+        <div class="block">High Intensity Workout</div>
     </a>
-    <a href="/playlist4/">
-        <div class="block">Ambient Med 4</div>
+    <a href="/playpage4/">
+        <div class="block">Coding time</div>
     </a>
-    <a href="/playlist5/">
-        <div class="block">Ambient Med</div>
+    <a href="/playpage5/">
+        <div class="block">Party it Up!</div></div>
     </a>
-    <a href="/playlist6/">
-        <div class="block">Ambient Med</div>
+    <a href="/playpage6/">
+        <div class="block">Slow Jams</div>
     </a>
-    <a href="/playlist7/">
-        <div class="block">Ambient Med</div>
-    </a>
+   
 
 </div>
