--- a/views/playpage2.handlebars
+++ b/views/playpage2.handlebars
@@ -3,9 +3,9 @@
     {{createdAt}}
 </div>
 <div>
-    <h1>Ambient Meditative playlist</h1>
+    <h1>Concentration & Focus</h1>
     <p>User description</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0r6C3z3TEKw" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
 
