--- a/views/playpage3.handlebars
+++ b/views/playpage3.handlebars
@@ -3,10 +3,10 @@
     {{createdAt}}
 </div>
 <div>
-    <h1>Ambient Meditative playlist</h1>
+    <h1>High Intensity Workout</h1>
     <p>User description</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5mzRsKA-GPI" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
 
-</div>
+</div>>
