--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -40,11 +40,19 @@
         <div class="block">Coding time</div>
     </a>
     <a href="/playpage5/">
-        <div class="block">Party it Up!</div></div>
+        <div class="block">Party it Up!</div>
     </a>
     <a href="/playpage6/">
         <div class="block">Slow Jams</div>
     </a>
-   
+    <a href="/playpage7/">
+        <div class="block">Chill Out</div>
+    </a>
+    <a href="/playpage8/">
+        <div class="block">Jazz & Coffee</div>
+    </a>
+    <a href="/playpage9/">
+        <div class="block">Feeling Classical</div>
+    </a>
 
 </div>
