--- a/views/playpage1.handlebars
+++ b/views/playpage1.handlebars
@@ -4,7 +4,7 @@
 </div>
 <div>
     <h1>Ambient Meditative playlist</h1>
-    <p>User description</p>
+    <p>Deep relaxing music that can be used as meditation music, sleep music and relaxation music. This calming ambient music is composed by Peder B. Helland for Soothing Relaxation.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
