--- a/views/playpage2.handlebars
+++ b/views/playpage2.handlebars
@@ -4,7 +4,7 @@
 </div>
 <div>
     <h1>Concentration & Focus</h1>
-    <p>User description</p>
+    <p>Music To help you concentrate and focus while getting down on work.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0r6C3z3TEKw" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
