--- a/views/playpage5.handlebars
+++ b/views/playpage5.handlebars
@@ -4,7 +4,7 @@
 </div>
 <div>
     <h1>Party it Up!</h1>
-    <p>User description</p>
+    <p>Play this if you are having a Party.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/a8q3Ea9GwXg" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
