--- a/views/playpage7.handlebars
+++ b/views/playpage7.handlebars
@@ -3,9 +3,9 @@
     {{createdAt}}
 </div>
 <div>
-    <h1>Coding time<</h1>
-    <p>A playlist that is designed to help with coding/programming wont get in the way but will keep you going.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/l9nh1l8ZIJQ" frameborder="0"
+    <h1>Chill Out</h1>
+    <p>Time to relax and listen to some lo-fi beats.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5qap5aO4i9A" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
 
