--- a/views/playpage6.handlebars
+++ b/views/playpage6.handlebars
@@ -4,7 +4,7 @@
 </div>
 <div>
     <h1>Slow Jams</h1>
-    <p>User description</p>
+    <p>Get this playlist on if you are feeling romantic.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ma6ZRl85hJU" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
