--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -10,7 +10,7 @@
         <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
         <hr>
         <p>Check out our music moods, then add your own!</p>
-        <a href="#" class="button large learn-button" id="learn">Learn More</a>
+        <a href="#" class="button expanded learn-button" id="learn">Check It Out!</a>
     </div>
 </div>
 
