--- a/views/playpage2.handlebars
+++ b/views/playpage2.handlebars
@@ -7,6 +7,7 @@
     <p>Music To help you concentrate and focus while getting down on work.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0r6C3z3TEKw" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <img src="https://images.unsplash.com/photo-1535033303881-1f626566b35e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
+        alt="placeholder">
 
 </div>
