--- a/views/playpage4.handlebars
+++ b/views/playpage4.handlebars
@@ -3,10 +3,13 @@
     {{createdAt}}
 </div>
 <div>
-    <h1>Coding time<</h1>
-    <p>A playlist that is designed to help with coding/programming wont get in the way but will keep you going.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/l9nh1l8ZIJQ" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <h1>Coding time<< /h1>
+            <p>A playlist that is designed to help with coding/programming wont get in the way but will keep you going.
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/l9nh1l8ZIJQ" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <img src="https://images.unsplash.com/photo-1511122242484-7396b11888dc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+                alt="placeholder">
 
 </div>
