--- a/views/playpage5.handlebars
+++ b/views/playpage5.handlebars
@@ -7,6 +7,7 @@
     <p>Play this if you are having a Party.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/a8q3Ea9GwXg" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <img src="https://images.unsplash.com/photo-1549605798-67bc299c55e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+        alt="placeholder">
 
 </div>
