--- a/views/playpage3.handlebars
+++ b/views/playpage3.handlebars
@@ -7,6 +7,7 @@
     <p>User description</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5mzRsKA-GPI" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <img src="https://images.unsplash.com/photo-1476480862126-209bfaa8edc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+        alt="placeholder">
 
 </div>>
