--- a/views/playpage6.handlebars
+++ b/views/playpage6.handlebars
@@ -7,6 +7,7 @@
     <p>Get this playlist on if you are feeling romantic.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ma6ZRl85hJU" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <img src="https://images.unsplash.com/photo-1583944009439-57f0bb0168cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+        alt="placeholder">
 
 </div>
