--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -7,7 +7,7 @@
             <li>
                 <ul class="menu">
                     {{#if isAuthenticated}}
-                    <li><a href="/logout">Log Out</a></li>
+                    <li><a class="exit" href="/logout">Log Out</a></li>
                     {{else}}
                     <li><a href="/signup">Sign Up</a></li>
                     {{/if}}
