--- a/views/create-playlist.handlebars
+++ b/views/create-playlist.handlebars
@@ -1,14 +1,17 @@
 {{> topbar}}
 
-<form>
-  <label for="title">Title</label>
-  <input type="text" />
-  <label for="title">Mood</label>
-  <input type="text" />
-  <label for="title">Description</label>
-  <textarea type="text"> </textarea>
-  <label for="title">Youtube Video URL</label>
-  <input type="text" />
+<div id="input">
+  <form>
+    <label for="title">Title</label>
+    <input type="text" />
+    <label for="title">Mood</label>
+    <input type="text" />
+    <label for="title">Description</label>
+    <textarea type="text"> </textarea>
+    <label for="title">Youtube Video URL</label>
+    <input type="text" />
 
-  <button>Create Playlist</button>
-</form>
+    <button>Create Playlist</button>
+  </form>
+
+</div>
