--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -1,16 +1,18 @@
 {{> topbar}}
 
-<div class="work-feature-block row" id="danny">
-    <div class="columns medium-7">
-        <img class="work-feature-block-image"
-            src="https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-            alt="" />
-    </div>
-    <div class="columns medium-5">
-        <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
-        <hr>
-        <p>Check out our music moods, then add your own!</p>
-        <a href="#" class="button expanded learn-button" id="learn">Check It Out!</a>
+<div id="danny">
+    <div class="work-feature-block row">
+        <div class="columns medium-7">
+            <img class="work-feature-block-image"
+                src="https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                alt="" />
+        </div>
+        <div class="columns medium-5">
+            <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
+            <hr>
+            <p>Check out our music moods, then add your own!</p>
+            <a href="#" class="button expanded learn-button" id="learn">Check It Out!</a>
+        </div>
     </div>
 </div>
 
