set up routes on html/routes for playpages

--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -26,32 +26,32 @@
     {{/each}}
 
 
-    <a href="/playpage1">
+    <a href="/playpage/1">
         <div class="block">Ambient Meditative playlist</div>
     </a>
 
-    <a href="/playpage2/">
+    <a href="/playpage/2">
         <div class="block">Concentration & Focus</div>
     </a>
-    <a href="/playpage3/">
+    <a href="/playpage/3">
         <div class="block">High Intensity Workout</div>
     </a>
-    <a href="/playpage4/">
+    <a href="/playpage/4">
         <div class="block">Coding time</div>
     </a>
-    <a href="/playpage5/">
+    <a href="/playpage/5">
         <div class="block">Party it Up!</div>
     </a>
-    <a href="/playpage6/">
+    <a href="/playpage/6">
         <div class="block">Slow Jams</div>
     </a>
-    <a href="/playpage7/">
+    <a href="/playpage/7">
         <div class="block">Chill Out</div>
     </a>
-    <a href="/playpage8/">
+    <a href="/playpage/8">
         <div class="block">Jazz & Coffee</div>
     </a>
-    <a href="/playpage9/">
+    <a href="/playpage/9">
         <div class="block">Feeling Classical</div>
     </a>
 
