--- a/views/playpage1.handlebars
+++ b/views/playpage1.handlebars
@@ -2,13 +2,29 @@
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
-    <h1>Ambient Meditative playlist</h1>
-    <p>Deep relaxing music that can be used as meditation music, sleep music and relaxation music. This calming ambient
-        music is composed by Peder B. Helland for Soothing Relaxation.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1031&q=80"
-        alt="placeholder">
 
+<div>
+    <div class="featured-image-block-grid">
+        <div class="featured-image-block-grid-header small-10 medium-8 large-7 columns text-center">
+            <h1>Ambient Meditative playlist</h1>
+            <p>Deep relaxing music that can be used as meditation music, sleep music and relaxation music. This calming
+                ambient
+                music is composed by Peder B. Helland for Soothing Relaxation.</p>
+        </div>
+
+        <div class="featured-image-block column">
+            <a href="#">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </a>
+        </div>
+
+        <div class="featured-image-block column">
+            <a href="#">
+                <img width="560" height="315"
+                    src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=560&q=315"
+                    alt="placeholder"> </a>
+        </div>
+    </div>
 </div>
