--- a/views/playpage1.handlebars
+++ b/views/playpage1.handlebars
@@ -1,14 +1,26 @@
-<div>
-    {{User.email}}
-    {{createdAt}}
-</div>
-<div>
+{{> topbar }}
+ <div>
+    {{ User.email }}
+    {{ createdAt }}
+ </div>
+<div class="james">
     <h1>Ambient Meditative playlist</h1>
-    <p>Deep relaxing music that can be used as meditation music, sleep music and relaxation music. This calming ambient
+    <p class="kns">Deep relaxing music that can be used as meditation music, sleep music and relaxation music. This calming ambient
         music is composed by Peder B. Helland for Soothing Relaxation.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1031&q=80"
-        alt="placeholder">
+    
 
+</div>
+
+<div class="news-image-gallery-container">
+  <div class="row">
+    <div class="small-12 medium-12 large-8 columns">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/fNh2yB0w8gU" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
+    </div>
+    <div class="small-12 medium-12 large-4 columns">
+      <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1031&q=80"
+        alt="placeholder">
+    </div>
+  </div>
 </div>
