--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-.body, .html{
+.body {
   background-color: #210124;
 }
 
@@ -9,12 +9,15 @@
 }
 
 .top-bar{
-  color: #4c5b61;
+  color:#89A6BE ;
+  background-color: #89A6BE;
   padding-left: 0px;
     padding-bottom: 0px;
     padding-right: 0px;
     padding-top: 0px;
 }
+
+ 
 
 #learn{
   color: #89abbe;
@@ -336,131 +339,6 @@
   color: #aaabbc;
 }
 
-.holy-grail-header {
-  background-color: #070707;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 4;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-}
-
-@media screen and (max-width: 60em) {
-  .holy-grail-left {
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 4;
-  }
-}
-
-@media screen and (max-width: 60em) {
-  .holy-grail-middle {
-    -ms-grid-row: 3;
-        grid-row-start: 3;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 4;
-  }
-}
-
-@media screen and (max-width: 60em) {
-  .right-nav {
-    -ms-grid-row: 4;
-        grid-row-start: 4;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 4;
-  }
-}
-
-.holy-grail-footer {
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 4;
-}
-
-
-.comment-section-container {
-  background-color: #fefefe;
-  padding: 1rem;
-}
-
-.comment-section-author {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 1rem;
-}
-
-.comment-section-author .comment-section-name {
-  margin-left: 1rem;
-}
-
-.comment-section-author .comment-section-name p {
-  margin-bottom: 0;
-}
-
-.comment-section-box {
-  background-color: #e6e6e6;
-  padding: 1rem;
-}
-
-
-.rating-block {
-padding: 2px 5px;
-display: -webkit-flex;
-display: -ms-flexbox;
-display: flex;
--webkit-align-items: center;
-    -ms-flex-align: center;
-        align-items: center;
--webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-        justify-content: space-between;
-}
-
-.rating-block .ratings-type {
-margin-right: 1rem;
-margin-bottom: 0;
-}
-
-.rating-block .rating-block {
-display: -webkit-flex;
-display: -ms-flexbox;
-display: flex;
--webkit-align-items: center;
-    -ms-flex-align: center;
-        align-items: center;
-margin-bottom: 2rem;
-}
-
-.rating-block .rating-block-rating {
-display: -webkit-flex;
-display: -ms-flexbox;
-display: flex;
-}
-
-.rating-block .star {
-cursor: pointer;
-stroke: #cc4b37;
-}
-
-.rating-block .rating-block-rating .star.selected polygon {
-fill: #cc4b37;
-}
-
-.rating-block .rating-block-rating.is-voted .star polygon {
-fill: #cc4b37;
-}
-
-.rating-block .rating-block-rating.is-voted .star.selected ~ .star polygon {
-fill: transparent;
-}
 
 
 .work-feature-block {
@@ -479,4 +357,127 @@ fill: transparent;
   padding: 10px 0;
 }
 
+#danny{
+  margin-right: 0px;
+}
+
+@charset "UTF-8";
+
+.news-image-gallery-container {
+  background-color: #210124;
+  margin-right: 0px;
+    border-right-width: 135px;
+    padding-right: 85px;
+    padding-bottom: 80px;
+    padding-left: 80px;
+    padding-top: 100px;
+}
+
+.news-image-gallery-container .rounded-social-buttons {
+  text-align: left;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 0.125rem solid transparent;
+  padding: 0;
+  text-decoration: none;
+  text-align: center;
+  color: #210124;
+  font-size: 1.25rem;
+  font-weight: normal;
+  line-height: 1.8em;
+  border-radius: 1.6875rem;
+  transition: 0.5s ease all;
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button:hover, .news-image-gallery-container .rounded-social-buttons .social-button:focus {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.facebook {
+  background: #3b5998;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.facebook:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.facebook:hover, .news-image-gallery-container .rounded-social-buttons .social-button.facebook:focus {
+  color: #3b5998;
+  background: #fefefe;
+  border-color: #3b5998;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.twitter {
+  background: #55acee;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.twitter:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.twitter:hover, .news-image-gallery-container .rounded-social-buttons .social-button.twitter:focus {
+  color: #55acee;
+  background: #fefefe;
+  border-color: #55acee;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.linkedin {
+  background: #007bb5;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.linkedin:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.linkedin:hover, .news-image-gallery-container .rounded-social-buttons .social-button.linkedin:focus {
+  color: #007bb5;
+  background: #fefefe;
+  border-color: #007bb5;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.google-plus {
+  background: #dd4b39;
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.google-plus:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.news-image-gallery-container .rounded-social-buttons .social-button.google-plus:hover, .news-image-gallery-container .rounded-social-buttons .social-button.google-plus:focus {
+  color: #dd4b39;
+  background: #fefefe;
+  border-color: #dd4b39;
+}
+
+.news-image-gallery-container .news-image-gallery-title {
+  margin-top: .5rem;
+}
+
+.news-image-gallery-container .read-more {
+  color: #8a8a8a;
+}
+
+.james{
+  text-align: center;
+  background-color: #210124;
+  color: #89A6BE;
+}
+
+.kns{
+  margin-bottom: 0px;
+}
 
