--- a/views/playpage.handlebars
+++ b/views/playpage.handlebars
@@ -1,12 +1,13 @@
-<div>
-    {{User.email}}
-    {{createdAt}}
-</div>
-<div>
-    <h1>{{title}}</h1>
-    <p>{{description}}</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{youtubeVideoId}}" frameborder="0"
+{{> topbar }}
+ <div>
+    {{ User.email }}   
+    {{ createdAt }}
+ </div>
+ <div>
+    <h1>{{ title }}</h1>
+    <p>{{ description }}</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ {{ youtubeVideoId }} " frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="/api/unsplash/{{mood}}" alt="placeholder">
+    <img data-mood={{mood}} src="/api/unsplash/{{ mood }}" alt="placeholder">
 
-</div>
+ </div>
