added the class names and foundation divs to playpages2-9

--- a/views/playpage2.handlebars
+++ b/views/playpage2.handlebars
@@ -1,13 +1,26 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
+<div class="james">
     <h1>Concentration & Focus</h1>
-    <p>Music To help you concentrate and focus while getting down on work.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/0r6C3z3TEKw" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1535033303881-1f626566b35e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
-        alt="placeholder">
+    <p class="kns">Music To help you concentrate and focus while getting down on work</p>
+
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0r6C3z3TEKw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
+            <img src="https://images.unsplash.com/photo-1535033303881-1f626566b35e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
+                alt="placeholder">
+        </div>
+    </div>
 
 </div>
