--- a/views/playpage3.handlebars
+++ b/views/playpage3.handlebars
@@ -1,13 +1,27 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
+<div class="james">
     <h1>High Intensity Workout</h1>
-    <p>User description</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5mzRsKA-GPI" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1476480862126-209bfaa8edc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-        alt="placeholder">
+    <p class="kns">Listen to this playlist if you need some motivation to workout</p>
+
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5mzRsKA-GPI" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
+            <img src="https://images.unsplash.com/photo-1476480862126-209bfaa8edc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+                alt="placeholder">
+
+        </div>
+    </div>
 
 </div>>
