--- a/views/playpage4.handlebars
+++ b/views/playpage4.handlebars
@@ -1,15 +1,29 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
-    <h1>Coding time<< /h1>
-            <p>A playlist that is designed to help with coding/programming wont get in the way but will keep you going.
+<div class="james">
+    <h1>Coding time</h1>
+            <p class="kns">A playlist that is designed to help with coding/programming wont get in the way but will keep
+                you going
             </p>
+
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/l9nh1l8ZIJQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
             <img src="https://images.unsplash.com/photo-1511122242484-7396b11888dc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
                 alt="placeholder">
+
+        </div>
+    </div>
 
 </div>
