--- a/views/playpage5.handlebars
+++ b/views/playpage5.handlebars
@@ -1,13 +1,25 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
+<div class="james">
     <h1>Party it Up!</h1>
-    <p>Play this if you are having a Party.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/a8q3Ea9GwXg" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1549605798-67bc299c55e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-        alt="placeholder">
+    <p class="kns">Play this when its time to party</p>
 
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/a8q3Ea9GwXg" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
+            <img src="https://images.unsplash.com/photo-1549605798-67bc299c55e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+                alt="placeholder">
+        </div>
+    </div>
 </div>
