--- a/views/playpage6.handlebars
+++ b/views/playpage6.handlebars
@@ -1,13 +1,25 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
+<div class="james">
     <h1>Slow Jams</h1>
-    <p>Get this playlist on if you are feeling romantic.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ma6ZRl85hJU" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="https://images.unsplash.com/photo-1583944009439-57f0bb0168cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-        alt="placeholder">
+    <p class="kns">Get this playlist on if you are feeling romantic</p>
 
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ma6ZRl85hJU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
+            <img src="https://images.unsplash.com/photo-1583944009439-57f0bb0168cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+                alt="placeholder">
+        </div>
+    </div>
 </div>
