--- a/views/playpage8.handlebars
+++ b/views/playpage8.handlebars
@@ -1,12 +1,26 @@
+{{> topbar }}
 <div>
     {{User.email}}
     {{createdAt}}
 </div>
-<div>
+<div class="james">
     <h1>Jazz & Coffee</h1>
-    <p>If you are feeling like listening to some jazz this will be perfect especially with some coffee.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5FN2sjIhxa4" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
+    <p class="kns">If you are feeling like listening to some jazz this will be perfect especially with some coffee</p>
 
+</div>
+
+<div class="news-image-gallery-container">
+    <div class="row">
+        <div class="small-12 medium-12 large-8 columns">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5FN2sjIhxa4" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+        <div class="small-12 medium-12 large-4 columns">
+            <img src="https://images.unsplash.com/photo-1438804339156-c72cb5183686?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                alt="placeholder">
+
+        </div>
+    </div>
 </div>
