--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 .body {
   background-color: #210124;
+  
 }
 
 .grid-container {
@@ -341,15 +342,18 @@
 
 
 
-.work-feature-block {
+.work-feature-block, .row{
   padding: 10px 0;
-  border-top: 1px solid #cacaca;
-  border-bottom: 1px solid #cacaca;
+  border-top: 1px solid #210124;
+  border-bottom: 1px solid #210124;
   background-color: #210124;
   color:#89abbe;
   margin-left: 0px;
   margin-right: 0px;
+  max-width: 100%;
 }
+
+
 
 .work-feature-block-image {
   display: block;
@@ -479,5 +483,71 @@
 
 .kns{
   margin-bottom: 0px;
+}
+
+
+.translucent-form-overlay {
+  max-width: 500px;
+  width: 100%;
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS80xFh0mUDvbfP2bPS2xFHdSSDn0LhjlhB7OySwKMwQmaDSoIR&usqp=CAU");
+  background-size: cover;
+  background-position: center;  padding: 20px;
+  color: #fefefe;
+  margin-left: 315px;
+}
+
+.translucent-form-overlay .columns.row {
+  display: block;
+}
+
+.translucent-form-overlay h3, .translucent-form-overlay label {
+  color: #fefefe;
+}
+
+.translucent-form-overlay input, .translucent-form-overlay select {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input::-webkit-input-placeholder {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input:-ms-input-placeholder {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input::placeholder {
+  color: #8a8a8a;
+}
+
+.createbackground{
+  background-color:  #210124;
+}
+
+
+.featured-image-block-grid {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #210124;
+  
+}
+
+
+
+.featured-image-block {
+  margin-bottom: 20px;
+}
+
+.featured-image-block .featured-image-block-title {
+  font-weight: 600;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1em;
+  color: #89A6BE;
+}
+
+.featured-image-block a:hover p {
+  color: #1779ba;
 }
 
