updated new moods

--- a/views/create-playlist.handlebars
+++ b/views/create-playlist.handlebars
@@ -1,4 +1,4 @@
- {{> topbar }}
+{{> topbar }}
 
 <div>
   <div class="createbackground">
@@ -9,19 +9,16 @@
 
         <div class="row columns">
           <label>Title
-            <input type="text" name="tile" placeholder="Title of your Playlist">
+            <input type="text" name="tile" id="title" placeholder="Title of your Playlist">
           </label>
           <label>Mood
-            <input type="text" name="tile" placeholder="Mood of your Playlist">
+            <input type="text" name="tile" id="mood" placeholder="Mood of your Playlist">
           </label>
           <label>Description
-            <input type="text" name="tile" placeholder="Description of your Playlist">
+            <input type="text" name="tile" id="description" placeholder="Description of your Playlist">
           </label>
           <label>YouTube URL Link
-            <input type="text" name="tile" placeholder="https://www.youtube.com/watch/?v=">
-          </label>
-          <label>Title
-            <input type="text" name="tile" placeholder="Title of your Playlist">
+            <input type="text" name="tile" id="youtube" placeholder="https://www.youtube.com/watch/?v=">
           </label>
 
           <button type="button" id="createbutton" class="primary button expanded search-button">
