--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -1,4 +1,4 @@
-  {{> topbar }}
+{{> topbar }}
 
 <div id="danny">
     <div class="work-feature-block row">
@@ -16,6 +16,10 @@
     </div>
 </div>
 
+<div>
+    <div class="grid2">
+    </div>
+</div>
 
 <div class="header-grid" id="playBoxes">
     <a href="/create-playlist">
