--- a/views/playpage9.handlebars
+++ b/views/playpage9.handlebars
@@ -13,11 +13,14 @@
     <div class="row">
         <div class="small-12 medium-12 large-8 columns">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/jgpJVI3tDbY" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
         </div>
         <div class="small-12 medium-12 large-4 columns">
             <img src="https://images.unsplash.com/photo-1519683109079-d5f539e1542f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                 alt="placeholder">
+
         </div>
     </div>
 </div>
